--- a/src/template.html
+++ b/src/template.html
@@ -8,11 +8,6 @@
   </head>
   <body>
     <div class="root"></div>
-    <div>webpack hello</div>
-    <!-- <div class="погода">
-        <button class="get-wether">получить погоду</button>
-        <div class="display">погода</div>
-    </div> -->
-    <div id="stats-display">none</div>
+    <div id="stats-display"></div>
   </body>
 </html>
