--- a/src/template.html
+++ b/src/template.html
@@ -7,8 +7,16 @@
     <title>Document</title>
   </head>
   <body>
-    <div class="root"></div>
-    <div id="stats-display"></div>
-    <div id="player-stats"></div>
+    <div class="root">
+      <div class="main-section">
+        <div id="game-field"></div>
+        <div class="side-bar">
+          <div id="player-stats"></div>
+        </div>
+      </div>
+      <div class="footer">
+        <div id="stats-display"></div>
+      </div>
+    </div>
   </body>
 </html>
