--- a/src/template.html
+++ b/src/template.html
@@ -11,7 +11,9 @@
       <div class="main-section">
         <div id="game-field"></div>
         <div class="side-bar">
-          <div id="player-stats"></div>
+          <div id="player-stats">
+            <div>player:</div>
+          </div>
         </div>
       </div>
       <div class="footer">
