--- a/src/template.html
+++ b/src/template.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="root">
-      <canvas width="800" height="600"></canvas>
+      <canvas></canvas>
       <div class="main-section">
         <div id="game-field"></div>
         <div class="side-bar">
