--- a/src/template.html
+++ b/src/template.html
@@ -8,7 +8,8 @@
   </head>
   <body>
     <div class="root">
-      <canvas></canvas>
+      <canvas id="main-canvas"></canvas>
+      <canvas id="second-canvas"></canvas>
       <div class="main-section">
         <div id="game-field"></div>
         <div class="side-bar">
